--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "jquery": "^3.5.1",
+    "view-design": "^4.4.0",
+    "vue-router": "^3.4.8",
+    "axios": "^0.21.0",
+    "element-ui": "2.14.1"
   },
   "eslintConfig": {
     "root": true,
@@ -32,7 +37,7 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {"no-unused-vars":"off"}
   },
   "browserslist": [
     "> 1%",
